# ComputerVisionProject

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  fragment_shader.glsl  frustum.v.glsl
src/: glmain.cpp  glmain.h  headtracker.cpp  headtracker.h  main.cpp  renderer.cpp  renderer.h  renderold.cpp  renderold.h  sma.h  util.cpp
src/common/: cube.cpp
